--- a/FlaskUdemyCourse/Templates/Index.html
+++ b/FlaskUdemyCourse/Templates/Index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Home Page</h1>
+    <img src="../Static/1200px-Flask_logo.svg.png" alt="Flask" />
+    <img src="../Static/flask-python.png" alt="Flask" />
 </body>
 </html>
