--- a/FlaskUdemyCourse/Templates/Index.html
+++ b/FlaskUdemyCourse/Templates/Index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Home Page</h1>
-    <img src="../Static/1200px-Flask_logo.svg.png" alt="Flask" />
-    <img src="../Static/flask-python.png" alt="Flask" />
+    <img src="D:\Archivos de Programa\VisualStudio\repos\FlaskUdemyCourse\FlaskUdemyCourse\Static\1_Q5EUk28Xc3iCDoMSkrd1_w.jpg" alt="Flask" />
+    <ol>
+        <li>{{dictionary['Name']}}</li>
+        <li>{{dictionary['Lastname']}}</li>
+        <li>{{dictionary['Country']}}</li>
+    </ol>
 </body>
 </html>
